<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>gamelauncher</groupId>
		<artifactId>GameLauncher</artifactId>
		<version>0.0.1-SNAPSHOT</version>
	</parent>
	<artifactId>base</artifactId>
	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<pngdecoder.version>1.0</pngdecoder.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.9.0</version>
		</dependency>
		<dependency>
			<groupId>org.l33tlabs.twl</groupId>
			<artifactId>pngdecoder</artifactId>
			<version>${pngdecoder.version}</version>
		</dependency>
	</dependencies>
</project>